--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@ header.masthead {
   margin-top: 88px;
   width: 100%;
   padding-bottom: 7rem;
-  background-image: url(../assets/img/escritorio.jpg);
+  background-image: url('/assets/img/escritorio.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
